k8s/overlays/minikube/backend-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  template:
    spec:
      containers:
        - name: backend
          resources:
            requests: # 只有當 Node 上還有 0.1顆 CPU 和 256mb RAM 的空位時，Pod 才會被派過去
              cpu: "100m"
              memory: "256Mi"
            limits: # 如果 Pod 試圖使用超過設定的用量，CPU會被降速(變慢但不會死)，Memory則會被 Out Of Memory Killed 強制重啟
              cpu: "300m"
              memory: "512Mi"
