k8s/overlays/minikube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tire-ordering
spec:
  ingressClassName: nginx
  rules:
    - host: kuang-i-tire
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
